@@ -177,19 +177,19 @@ define sssd::provider::ldap (
   if $app_pki_ca_dir {
     $ldap_tls_cacertdir = $app_pki_ca_dir
   } else {
-    $ldap_tls_cacertdir = "${sssd::app_pki_dir}/pki/cacerts"
+    $ldap_tls_cacertdir = "${sssd::app_pki_dir}/cacerts"
   }
 
   if $app_pki_key {
     $ldap_tls_key = $app_pki_key
   } else {
-    $ldap_tls_key = "${sssd::app_pki_dir}/pki/private/${::fqdn}.pem"
+    $ldap_tls_key = "${sssd::app_pki_dir}/private/${::fqdn}.pem"
   }
 
   if $app_pki_cert {
     $ldap_tls_cert = $app_pki_cert
   } else {
-    $ldap_tls_cert = "${sssd::app_pki_dir}/pki/public/${::fqdn}.pub"
+    $ldap_tls_cert = "${sssd::app_pki_dir}/public/${::fqdn}.pub"
   }
 
   simpcat_fragment { "sssd+${name}#ldap_provider.domain":
