@@ -1,4 +1,6 @@
-* Wed Jan 04 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
+* Thu Jan 12 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
+- Updated to use new pki scheme.
+- Application certs now managed in /etc/pki/simp_apps/sssd/x509
 - Strongly typed
 
 * Mon Dec 19 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 6.0.0-0
